Implemented a builder strategy for the creation of bodies, and removed parsing from physics